# AgenticART

./: .bandit  .dockerignore  .gitignore  Dockerfile  GOVERNANCE.md  Modelfile.dojo  README.md  TODO.md  demo.py  docker-compose.yml  exploit_demo.py  mkdocs.yml  pyproject.toml  requirements.txt  test_cve_2025_36896.py
.github/: dependabot.yml
.rag_data/: chroma.sqlite3
adapters/: README.md  generate_placeholders.py  lora_config.yaml  train_adapter.sh
agent/: __init__.py  llm_client.py  mlx_adapter_client.py  planner.py  script_generator.py  summarizer.py
config/: .env.example  settings.yaml
core/: __init__.py  constants.py  governance.py  kali_executor.py  utils.py
demo/: README.md  cve_2025_36896.py  framework.py  live_exploit.py
docker/: Dockerfile.sandbox
docs/: ADVANCED_CHALLENGE_PLAN.md  DATA_SOURCES.md  DOCKER_SANDBOX.md  DOJO_FRAMEWORK.md  EXPERIMENTAL_RESULTS.md  MCP_INTEGRATION.md  RAG_SYSTEM.md  RESEARCH_INSIGHTS.md  SETUP.md  TOOLS.md  architecture.md  grading_rubric.md  index.md  quickstart.md
docs_site/: index.md
dojo/: README.md  RESEARCH_NOTES.md  __init__.py  brand_model.sh  challenge_value.py  cli.py  compare_challengers.py  config.py  custom_train.py  debug_model.py  exceptions.py  hybrid_challenger.py  models.py  models_v2.py  orchestrator.py  prove_impact.py  react_challenger.py  requirements.txt  scoring.py  test_end_to_end.py  test_phase2.py  test_phase3.py  train_white_belt.sh  train_yellow_belt.sh  trajectory_logger.py  trajectory_schema.py
reports/: curriculum_value.json  impact_analysis_v1.md
research_exports/: RESEARCH_DATA_ANDROID11_MILESTONE.json  RESEARCH_LAB_ENVIRONMENT.md  (+1 more)
webapp/: app.py  (+2 more)
(+319 files in other folders)
