[project]
name = "agentic-art"
version = "0.3.0"
description = "AgenticART: The Android Security Training Dojo"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "GitSolved" }
]
keywords = ["android", "security", "training", "llm", "rlhf", "dpo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-PyYAML",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/GitSolved/AgenticART"
Repository = "https://github.com/GitSolved/AgenticART"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dojo"]

[tool.ruff]
line-length = 100
exclude = ["dojo_finetune_package"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"dojo/test_*.py" = ["E402"]
"dojo/sensei/sensei.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "dojo_output/",
    "dojo_finetune_package/",
]
